fixed footer clipping issue

--- a/src/styles/index-styles.css
+++ b/src/styles/index-styles.css
@@ -18,7 +18,6 @@ body {
 
 body {
     overscroll-behavior: none;
-    overflow-y: clip;
     position: relative;
     isolation: isolate;
 }
